:bug: fix: navbar overlap with headings

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -226,7 +226,7 @@ h1, h2, h3, h4, h5, h6
 	color: #FFF
 	padding-bottom: 5rem
 	h2
-		margin-top: 5rem
+		margin-top: 6rem
 
 #End-Game
 	background-size: 40%
